--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* index.php [L]
+RewriteRule .* index.php [QSA,L]
+
+RewriteCond %{REQUEST_METHOD} !POST
+RewriteRule ^index.php / [L,R=301]
