--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "root/www",
     "require": {
-        "vlucas/phpdotenv": "^5.2.0"
+        "vlucas/phpdotenv": "^5.2.0",
+        "vlucas/valitron": "^1.4"
     }
 }
